<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondobienvenida"
    tools:context="nicosanto.a8proyecto.SegundaActivity">

    <TextView
        android:id="@+id/txtNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bienvenida"
        android:textAlignment="center"
        android:textSize="36sp"
        tools:ignore="HardcodedText"
        tools:layout_editor_absoluteX="162dp"
        tools:layout_editor_absoluteY="118dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp" />

    <EditText
        android:id="@+id/edtTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="12"
        android:hint="@string/hintTelefono"
        android:inputType="phone"
        android:textAlignment="center"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btnMarcar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/botonMarcar"
        android:textColor="@android:color/background_light"
        android:layout_below="@+id/edtTelefono"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/btnFinalizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/botonFinalizar"
        android:textColor="@android:color/background_light"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
